# pyadf435x

./: .gitignore  .gitmodules  README.md  adf435xctl  setup.py
adf435x/: __init__.py  adf435x.py  core.py  interfaces.py
contrib/: z60_adf435x.rules
examples/: random_hop.py  sweep.py
firmware/fx2/: Makefile.am  NEWS  autogen.sh  configure.ac  dscr.a51  fx2adf435xfw.c
firmware/fx2/include/: command.h
firmware/stm32/: Makefile  stm32adf435xfw.c  stm32f103.ld
